--- a/eTickets_Web/appsettings.json
+++ b/eTickets_Web/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "Conn": "Data Source=BABEGT\\SQLEXPRESS;Initial Catalog=eTicketsDb;Integrated Security=True;TrustServerCertificate=True;"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
