--- a/eTickets_Web/appsettings.json
+++ b/eTickets_Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Conn": "Data Source=BABEGT\\SQLEXPRESS;Initial Catalog=eTicketsDb;Integrated Security=True;TrustServerCertificate=True;"
+    "Conn": "Data Source=localhost;Initial Catalog=eTicketsDb;Integrated Security=True;TrustServerCertificate=True;"
   },
 
   "Logging": {
